--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Spelmeny</title>
 </head>
 
-<body>
+<body style="background-color:pink;">
 
-    <div class=""></div>
-    <header>
-        Välj spel!!!
-    </header>
-    
-<a href="hellovskuromi.html">Hello kitty vs Kuromi</a>
-<a href="police.html">Police Hello Kitty</a>
+
+                <div class="container">
+                    <div class="header">Välj spel</div>                    
+                    <div class="hkk"><a href="hellovskuromi.html">Hello kitty vs Kuromi</div></a>
+                    <div class="phk"><a href="police.html">Police Hello kitty</div></a>
+
+                  </div>
 </body>
